--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de senhas</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Road+Rage&display=swap" rel="stylesheet">
 </head>
-<body>
-    <img src="" alt="">
-    <h2 class="titulo-principal">Gerador de senhas</h2>
-    <h3 class="titulo segundario">gere suas senhas em apenas um click</h3>
-</body>
-</html>
 
+<body>
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/bvhyhbyr.json" trigger="hover" style="width:250px;height:250px">
+    </lord-icon>
+    <h2 class="titulo-principal">Gerador de senhas</h2>
+    <h3 class="titulo-secundario">Gere instantaneamente uma senha segura</h3>
+</body>
+
+</html>
